use jdave for audio handling